--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <h1>Etch-A-Sketch</h1>
-    <main class="container">
-        <div class="grid">grid</div>
+    <main>
+        <div id="grid"></div>
         
     </main>
     <footer class="footer">
         <div class="buttons">
-            <button>small</button>
-            <button>medium</button>
-            <button>large</button>
-            <button>erase</button>
-            <button>color</button>
-            <button>fade to black</button>
+            <button id="small-btn">small</button>
+            <button id="medium-btn">medium</button>
+            <button id="large-btn">large</button>
+            <button id="erase-btn">erase</button>
+            <button id="color-btn">color</button>
+            <button id="f2b-btn">fade to black</button>
         </div>
     </footer>
     <script src="app.js"></script>  
