11/16/21 semi-final build
shader button still needs work
maybe touch up ui a bit

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     </main>
     <footer class="footer">
         <div class="buttons">
-            <button id="small-btn">small</button>
-            <button id="medium-btn">medium</button>
-            <button id="large-btn">large</button>
-            <button id="erase-btn">erase</button>
-            <button id="color-btn">color</button>
-            <button id="f2b-btn">fade to black</button>
+            <button id="small-btn">Small</button>
+            <button id="medium-btn">Medium</button>
+            <button id="large-btn">Large</button>
+            <button id="erase-btn">Reset</button>
+            <button id="gray-btn">Default Pen</button>
+            <button id="color-btn">Technicolor Pen</button>
+            <button id="f2b-btn">Button WIP</button>
         </div>
     </footer>
     <script src="app.js"></script>  
